# cybersim6

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
config/: default.yaml
cybersim/: __init__.py  __main__.py  cli.py  demo.py
cybersim/bruteforce/: auth_server.py  detection.py  dictionary_attack.py
cybersim/bruteforce/wordlists/: common.txt
cybersim/core/: anomaly_detection.py  audit_trail.py  base_detector.py  base_module.py  compliance.py  config_loader.py  detection_metrics.py  logging_engine.py  pdf_report.py  perf.py  remediation.py  reporter.py  safety.py  threat_score.py
cybersim/dashboard/: api_docs.py  server.py
cybersim/ddos/: detection.py  http_flood.py  syn_flood.py  target_server.py
cybersim/forensics/: __init__.py  analyzer.py
cybersim/honeypot/: honeypot.py
cybersim/incident_response/: __init__.py  response_engine.py
cybersim/phishing/: campaign.py  detection.py  phishing_server.py
cybersim/ransomware/: decryptor.py  detection.py  encryptor.py  ransom_note.py  safety_guard.py
cybersim/scanner/: __init__.py  port_scanner.py
cybersim/scenarios/: __init__.py  attack_chain.py
cybersim/sqli/: detection.py  injection_attack.py  vulnerable_server.py
cybersim/tutorial/: __init__.py  interactive.py
cybersim/utils/: __init__.py  password_analyzer.py
cybersim/waf/: __init__.py  firewall.py
cybersim/xss/: detection.py  vulnerable_app.py  xss_attack.py
docs/: architecture.md  contre_mesures.md  guide_sensibilisation.md  plan_reponse_incidents_irp.md  rapport_cve_cwe_mitre.md
sandbox/: setup_sandbox.py
tests/: conftest.py  helpers.py  test_cli.py  test_main.py  test_metadata.py
tests/test_bruteforce/: test_auth_server_http.py  test_bruteforce.py  test_dictionary_attack_runtime.py
tests/test_core/: test_anomaly_detection.py  test_audit_trail.py  test_base_detector.py  test_base_module.py  test_compliance.py  test_config_loader.py  test_detection_metrics.py  test_logging_engine.py  test_pdf_report.py  test_perf.py  test_remediation.py  test_reporter.py  test_safety.py  test_threat_score.py
tests/test_dashboard/: test_api_docs.py  test_dashboard.py
tests/test_ddos/: test_ddos.py  test_detection_thresholds.py  test_http_flood_runtime.py  test_syn_flood.py  test_target_server_http.py
tests/test_forensics/: test_analyzer.py
tests/test_honeypot/: test_honeypot.py
tests/test_incident_response/: test_response_engine.py
tests/test_integration/: test_attack_detect_flow.py
tests/test_phishing/: test_campaign.py  test_phishing.py  test_phishing_server_http.py
tests/test_ransomware/: test_edge_cases.py  test_ransomware.py  test_roundtrip_runtime.py
tests/test_scanner/: test_scanner.py
tests/test_scenarios/: test_attack_chain.py  test_mermaid.py
tests/test_sqli/: test_injection_attack_runtime.py  test_patterns.py  test_sqli.py  test_vulnerable_server_http.py
tests/test_tutorial/: test_logging_resilience.py  test_tutorial.py
tests/test_utils/: test_password_analyzer.py
tests/test_waf/: test_waf.py
tests/test_xss/: test_sanitizer.py  test_vulnerable_app_http.py  test_xss.py  test_xss_attack_runtime.py
tools/: project_tasks.py
