[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersim6"
version = "1.0.0"
description = "Plateforme de simulation de 6 cyberattaques en sandbox isole - EMSI Tanger 4IIR"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Omar BABBA", email = "omarbabba27@gmail.com"},
]
requires-python = ">=3.10"
keywords = ["cybersecurity", "simulation", "education", "pentesting", "sandbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Education",
]
dependencies = [
    "pycryptodome>=3.20.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/omarbabba779xx/cybersim6"
Repository = "https://github.com/omarbabba779xx/cybersim6"
Documentation = "https://github.com/omarbabba779xx/cybersim6/tree/main/docs"
Issues = "https://github.com/omarbabba779xx/cybersim6/issues"

[project.optional-dependencies]
network = ["scapy>=2.5.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "flake8>=7.0",
    "bandit>=1.7",
]
all = [
    "cybersim6[network,dev]",
]

[project.scripts]
cybersim = "cybersim.cli:main"

[tool.setuptools.packages.find]
include = ["cybersim*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["cybersim"]
omit = ["cybersim/tests/*", "cybersim/**/__pycache__/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E501", "W503", "E203"]
exclude = [".git", "__pycache__", "build", "dist", "*.egg-info"]

[tool.setuptools.package-data]
"cybersim.bruteforce" = ["wordlists/*.txt"]
"cybersim" = ["../config/*.yaml"]
